--- a/.github/workflows/publish.github-action.yml
+++ b/.github/workflows/publish.github-action.yml
@@ -24,6 +24,11 @@ jobs:
       - name: Install npm dependencies
         run: npm ci
 
+      - name: Configure git
+        run: |
+          git config user.name "${{ secrets.GIT_USER }}"
+          git config user.email "${{ secrets.GIT_EMAIL }}"
+
       - name: run standard-version
         run: npm run release
       
