--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prepare": "husky install"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "registry": "https://registry.npmjs.org/"
   },
   "keywords": [
     "eslint"
